Commit Integracion Roles

--- a/env/.env
+++ b/env/.env
@@ -5,4 +5,12 @@ DB_USER = root
 DB_PASSWORD = 
 DB_DATABASE = comercial_jenny
 
+//DEFINIR DATOS PARA JWT 
+JWT_SECRETO = AlmacenJenny
+
+//TIEMPO EXPIRACION TOKEN
+JWT_EXPIRES_TIME = 4h
+
+//TIEMPO EXPIRACION COOKIE
+JWT_COOKIE_EXPIRES = 90
 
